--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -8,10 +8,11 @@ mark {
 
 .layout {
   background-color: #0d1b2a;
+  min-height: 100vh;
   height: min-content;
   margin: 0px;
   color: aliceblue;
-  padding: 20px;
+  padding: 20px 0px 1px 0px;
 }
 
 .box {
